fix: startService